@@ -1,8 +1,9 @@
 package eu.europeana.thumbnail.service.impl;
 
+import eu.europeana.s3.S3Object;
 import eu.europeana.thumbnail.model.ImageSize;
 import eu.europeana.thumbnail.model.MediaStream;
-import eu.europeana.thumbnail.service.MediaStorageService;
+import eu.europeana.thumbnail.service.MediaReadStorageService;
 import eu.europeana.thumbnail.utils.IiifUtils;
 import jakarta.validation.constraints.Pattern;
 import org.apache.commons.lang3.NotImplementedException;
@@ -16,7 +17,7 @@ import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 
 /**
  * Download a thumbnail image from the Europeana IIIF Image server
@@ -24,14 +25,16 @@ import java.net.URL;
  *
  * @author Patrick Ehlert
  * Created on 2 sep 2020
+ * @deprecated
  */
 @Validated
 @Component
-public class IiifImageServerImpl implements MediaStorageService {
+@Deprecated(since = "v0.9 (nov 2025)")
+public class IiifImageReadServerImpl implements MediaReadStorageService {
 
     public static final String STORAGE_NAME = "IIIF-IS";
 
-    private static final Logger LOG = LogManager.getLogger(IiifImageServerImpl.class);
+    private static final Logger LOG = LogManager.getLogger(IiifImageReadServerImpl.class);
     private static final String INVALID_URL_MESSAGE = "Not a valid url";
 
     @Override
@@ -40,7 +43,7 @@ public class IiifImageServerImpl implements MediaStorageService {
     }
 
     /**
-     * @see MediaStorageService#retrieve(String, String)
+     * @see MediaReadStorageService#retrieve(String, String)
      *
      * Note that this is only supported if the originalUrl is provided (so for v2 requests), otherwise we simply return null
      *
@@ -71,7 +74,9 @@ public class IiifImageServerImpl implements MediaStorageService {
         if (content == null) {
             return null;
         }
-        return new MediaStream(id, imageUrl, content);
+        LOG.info("Returning thumbnail from IIIF server {} ", imageUrl);
+        // TODO can we determine content-length without reading the stream?
+        return new MediaStream(id, imageUrl, new S3Object(id, content, null));
     }
 
     /**
@@ -83,7 +88,7 @@ public class IiifImageServerImpl implements MediaStorageService {
     public InputStream retrieve(
             @Pattern(regexp = "^(https?|ftp)://.*$", message = INVALID_URL_MESSAGE) String originalUrl) {
         try {
-            return new BufferedInputStream(new URL(originalUrl).openStream());
+            return new BufferedInputStream(URI.create(originalUrl).toURL().openStream());
         } catch (MalformedURLException e) {
             LOG.error("'{}' is not a valid url", originalUrl, e);
         } catch (IOException e) {
